# callsup

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE_AND_API_DOCS.md  Dockerfile  GUIDE TO PROJECT RESEARCH .md  PROJECT_STATUS_SUMMARY.md  README.md  RUNNING_THE_SYSTEM.md  _launch_audio.ps1  _launch_gateway.ps1  _launch_ie.ps1  _launch_llm.ps1  appendices.md  auth_github_copilot.py  gateway.py  openapi.yaml  pkg_list.txt  requirements.txt  resources.json  smoke_result.txt  smoke_test.py  start-all.ps1  start.ps1  svc_llm_adapter.py  test-endpoints.ps1  test-intelligence.ps1  test_escalation_e2e.py
consolidated/callsup-intelligence-engine/: Dockerfile  README.md  openapi.yaml  pyproject.toml  resources.json
consolidated/callsup-intelligence-engine/.github/instructions/: callsup-system.instructions.md
consolidated/callsup-intelligence-engine/scripts/: e2e_demo.py
consolidated/callsup-intelligence-engine/src/callsup_intelligence_engine/: __init__.py  main.py
consolidated/callsup-intelligence-engine/src/callsup_intelligence_engine/api/: __init__.py  schemas.py
consolidated/callsup-intelligence-engine/src/callsup_intelligence_engine/core/: audit.py  conversation.py  llm_adapter.py  pipeline.py  redaction.py  verification.py
consolidated/callsup-intelligence-engine/src/callsup_intelligence_engine/tests/: test_api.py  test_redaction.py  test_verification.py
consolidated/callsup-platform/: Dockerfile  README.md  pyproject.toml
consolidated/callsup-platform/callsup_platform/: __init__.py  config.py  db.py  logging.py  main.py  metrics.py  models.py  schemas.py  security.py  services.py
consolidated/callsup-platform/tests/: conftest.py  test_integration_api.py  test_unit_onboarding.py  test_unit_redaction.py
(+61 files in other folders)
