[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "callsup-intelligence-engine"
version = "0.1.0"
description = "CALLSUP Intelligence Engine FastAPI service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "prometheus-client>=0.20.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/callsup_intelligence_engine/tests"]
addopts = "--cov=callsup_intelligence_engine --cov-report=term-missing --cov-fail-under=70"
