[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "callsup-platform"
version = "0.1.0"
description = "CALLSUP Platform module service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.2.1,<3.0.0",
  "prometheus-client>=0.20.0,<1.0.0",
  "cryptography>=43.0.0,<44.0.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "httpx>=0.27.0,<1.0.0"
]

[tool.setuptools.packages.find]
include = ["callsup_platform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=callsup_platform --cov-report=term-missing --cov-fail-under=70"

